# media_control

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
_/: __main__.py  basichttp.py  contents.json  index.js  main copy.py  main1.py  main__.py  player (expose).py  player (sep).py
client/: index.css  index.html  index.js
javascript/: index.js  package-lock.json  package.json
media_control/: __init__.py  __main__.py  cli.py  log.py  player.py  utils.py
media_control/media_session/: __init__.py  datastructures.py  media_session.py  player.py
media_control/public/: index.html
python/: Pipfile  color.py  contents.json  j.txt  log.py  main.py  player.py  server.py  utils.py
python/content/: contents.json  template.json
python/public/: control.html
www/player/: index.css  index.html  index.js
www/player/noSleep/: nosleep.js
