[tool.poetry]
name = "media_control"
version = "0.1.0"
description = ""
authors = ["virashu <svladichek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
media_session = {git = "https://github.com/virashu/media_session"}
saaba = {git = "https://github.com/virashu/saaba"}


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
